fixed error display text not aligned

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -2223,7 +2223,6 @@ div.tab button:first-child {
   border: 1px dashed #90a2ac;
   font-size: 14px;
   color: #bfcbd1;
-  margin-top: 20px;
 }
 
 #browse-events-content {
@@ -2315,8 +2314,8 @@ div.tab button:first-child {
 }
 
 #browse-run-query-btn-div {
-  padding-top: 20px;
-  margin-right: 15px;
+  padding-top: 26px;
+  float: right;
 }
 
 .table-bordered {
@@ -2640,7 +2639,6 @@ div.tab button:first-child {
 }
 
 #show-more {
-  margin-left: 15px;
   color: #a6a8b5;
   font-family: Open Sans;
   font-size: 14px;
@@ -2661,4 +2659,8 @@ div.tab button:first-child {
   color: #42b2f7 !important;
   font-weight: 600;
   font-family: Open Sans;
+}
+
+.filter-value-div {
+  line-height: 1.4;
 }
